--- a/IA/TP1/horario.ipynb
+++ b/IA/TP1/horario.ipynb
@@ -100,6 +100,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Código completo com execução:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -228,6 +235,163 @@
     "# Result\n",
     "k = ac_solver(days_too_short, arc_heuristic=sat_up)\n",
     "print(k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Código explicado:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O dominio foi criado com o intuito de introduzir valores válidos/possíveis para serem executados pelo agente.\n",
+    "Neste caso:\n",
+    "- Cada aula pode ser de Segunda a Sexta;\n",
+    "- tem a duração de 1 ou 2 horas;\n",
+    "- as aulas decorrem entre as 8h e as 17h;\n",
+    "- as aulas podem ser online ou presencial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dominio = {\n",
+    "    'name1': set(['lesson1']), 'dia1' : set(range(2,6+1)), 'dur1' : set(range(1,2+1)), 'hora1' : set(range(8,17+1)), 'tipo1' : set(['online','presencial']),\n",
+    "    'name2': set(['lesson2']), 'dia2' : set(range(2,6+1)), 'dur2' : set(range(1,2+1)), 'hora2' : set(range(8,17+1)), 'tipo2' : set(['online','presencial']),\n",
+    "    'name3': set(['lesson3']), 'dia3' : set(range(2,6+1)), 'dur3' : set(range(1,2+1)), 'hora3' : set(range(8,17+1)), 'tipo3' : set(['online','presencial']),\n",
+    "    #'name4': set(['lesson7']), 'dia7' : set(range(2,6+1)), 'dur7' : set(range(1,2+1)), 'hora7' : set(range(8,17+1)), 'tipo7' : set(['online','presencial']),\n",
+    "    #'name5': set(['lesson8']), 'dia8' : set(range(2,6+1)), 'dur8' : set(range(1,2+1)), 'hora8' : set(range(8,17+1)), 'tipo8' : set(['online','presencial']),\n",
+    "    #'name6': set(['lesson9']), 'dia9' : set(range(2,6+1)), 'dur9' : set(range(1,2+1)), 'hora9' : set(range(8,17+1)), 'tipo9' : set(['online','presencial']),\n",
+    "    #'name7': set(['lesson10']), 'dia10' : set(range(2,6+1)), 'dur10' : set(range(1,2+1)), 'hora10' : set(range(8,17+1)), 'tipo10' : set(['online','presencial']),\n",
+    "}       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Criou-se esta classe para receber os dados a serem tratados pelo agente e, posteriormente, passarem pelas diversas restrições, sendo elas:\n",
+    "- cond1_all_lessons_friday_durantion2hours(l):\n",
+    "    - Representa todas as aulas da quarta têm de ter duração de 2 horas;\n",
+    "- cond2_one_or_two_are_online(l):\n",
+    "    - 1 ou 2 aulas têm de ser online;\n",
+    "- cond3_class_should_not_have_more_3_lessons_day(l):\n",
+    "    - Cada turma não pode de ter mais 3 aulas por dia;\n",
+    "- cond4_online_lessons_cannot_be_booked_immediately(l):\n",
+    "    - As aulas online não podem ser reservadas após uma aula presencial;\n",
+    "- cond5_only_2_lessons_per_half_day(l):\n",
+    "    - Só pode haver 2 aulas de manhã ou de tarde;\n",
+    "- cond6_two_classes_specific_classRoom(l):\n",
+    "    - 2 turmas em salas específicas;\n",
+    "\n",
+    "Após a declaração das diferentes restrições, foi criado teste_condicoes() com o intuito de verificar as restrições efetuadas anteriormente e com base nestas guardar todos os valores num array para ser mostrado no resultado final. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class lesson:\n",
+    "    \n",
+    "    def __init__(self, name ,dia, dur, hora, tipo):\n",
+    "        self.name = name\n",
+    "        self.dia = dia\n",
+    "        self.dur = dur\n",
+    "        self.hora = hora\n",
+    "        self.tipo = tipo\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def cond1_all_lessons_friday_durantion2hours(l):\n",
+    "        for x  in l:\n",
+    "            if x.dia == 4 and x.dur != 2:\n",
+    "                return False\n",
+    "        return True\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def cond2_one_or_two_are_online(l):\n",
+    "        online = 0\n",
+    "        for x  in l:\n",
+    "            if x.tipo == 'online':\n",
+    "                online = online + 1\n",
+    "        if online > 0 and online <= 2:\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def cond3_class_should_not_have_more_3_lessons_day(l):\n",
+    "        lessons_per_day = [0,0,0,0,0]\n",
+    "        for x  in l:\n",
+    "            lessons_per_day[x.dia-2] = lessons_per_day[x.dia-2] + 1\n",
+    "        \n",
+    "        for ld in lessons_per_day:\n",
+    "            if ld > 3:\n",
+    "                return False\n",
+    "        return True\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def cond4_online_lessons_cannot_be_booked_immediately(l):\n",
+    "        return True\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def cond5_only_2_lessons_per_half_day(l):\n",
+    "        lessons_per_morning = [0,0,0,0,0]\n",
+    "        lessons_per_afternoon = [0,0,0,0,0]\n",
+    "        for x  in l:\n",
+    "            if x.hora <= 13:\n",
+    "                lessons_per_morning[x.dia-2] = lessons_per_morning[x.dia-2] + 1\n",
+    "            else:\n",
+    "                lessons_per_afternoon[x.dia-2] = lessons_per_afternoon[x.dia-2] + 1\n",
+    "\n",
+    "        for ld in lessons_per_morning:\n",
+    "            if ld > 2:\n",
+    "                return False\n",
+    "        \n",
+    "        for ld in lessons_per_afternoon:\n",
+    "            if ld > 2:\n",
+    "                return False\n",
+    "            \n",
+    "        return True\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def cond6_two_classes_specific_classRoom(l):\n",
+    "        return True\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def cond(l):\n",
+    "        if lesson.cond1_all_lessons_friday_durantion2hours(l) == False:\n",
+    "            return False\n",
+    "        if lesson.cond2_one_or_two_are_online(l) == False:\n",
+    "            return False\n",
+    "        if lesson.cond3_class_should_not_have_more_3_lessons_day(l) == False:\n",
+    "            return False\n",
+    "        if lesson.cond4_online_lessons_cannot_be_booked_immediately(l) == False:\n",
+    "            return False\n",
+    "        if lesson.cond5_only_2_lessons_per_half_day(l) == False:\n",
+    "            return False\n",
+    "        if lesson.cond6_two_classes_specific_classRoom(l) == False:\n",
+    "            return False\n",
+    "        return True\n",
+    "        \n",
+    "    \n",
+    "def teste_condicoes(*values):\n",
+    "    i = 0\n",
+    "    lessons = []\n",
+    "    while i < len(values):\n",
+    "        lessons.append(lesson(values[i], values[i+1], values[i+2], values[i+3], values[i+4]))\n",
+    "        i += 5   \n",
+    "        \n",
+    "    #print(values)\n",
+    "    \n",
+    "    return lesson.cond(lessons)"
    ]
   }
  ],
