--- a/IA/TP2/IA_Projeto02_G4/dataset.ipynb
+++ b/IA/TP2/IA_Projeto02_G4/dataset.ipynb
@@ -27,6 +27,8 @@
     "\n",
     "Você pode encontrar muitos conjuntos de dados públicos em https://www.kaggle.com/datasets.\n",
     "\n",
+    "O dataset escolhido para este projeto foi National Universities Ranking.\n",
+    "\n",
     "O projeto deve usar um único conjunto de dados para regras de classificação, agrupamento e associação.\n",
     "\n",
     "No entanto, se a equipa achar que não pode obter nenhum resultado interessante para as regras de associação, um conjunto de dados separado pode ser usado apenas para essa tarefa.\n"
@@ -94,7 +96,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.8"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
