--- a/IA/TP2/IA_Projeto02_G4/dataset.ipynb
+++ b/IA/TP2/IA_Projeto02_G4/dataset.ipynb
@@ -21,17 +21,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este documento apresenta o objetivo e os requisitos para o desenvolvimento do projeto 02. \n",
-    "\n",
     "O objetivo deste projeto é implementar e analisar diferentes abordagens e métodos de Machine Learning (ML) para resolver um problema específico usando um conjunto de dados aberto/público. \n",
     "\n",
     "Você pode encontrar muitos conjuntos de dados públicos em https://www.kaggle.com/datasets.\n",
     "\n",
     "O dataset escolhido para este projeto foi National Universities Ranking.\n",
     "\n",
-    "O projeto deve usar um único conjunto de dados para regras de classificação, agrupamento e associação.\n",
-    "\n",
-    "No entanto, se a equipa achar que não pode obter nenhum resultado interessante para as regras de associação, um conjunto de dados separado pode ser usado apenas para essa tarefa.\n"
+    "O projeto deve usar um único conjunto de dados para regras de classificação, agrupamento e associação."
    ]
   },
   {
