IA: Preparação dataset.py p/ novo dataset

--- a/IA/TP2/IA_Projeto02_G4/dataset.ipynb
+++ b/IA/TP2/IA_Projeto02_G4/dataset.ipynb
@@ -86,7 +86,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +97,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "11bc3faa42291987dff8047a7fe728de8bffd01e5e426b1fc111590146fa91bf"
+    "hash": "b1362bae308d2cbabd8a5ab8f667556672df736664851f8b959a6a34b73173dc"
    }
   }
  },
