IA: Atualização markdown

--- a/IA/TP2/IA_Projeto02_G4/dataset.ipynb
+++ b/IA/TP2/IA_Projeto02_G4/dataset.ipynb
@@ -23,9 +23,9 @@
    "source": [
     "O objetivo deste projeto é implementar e analisar diferentes abordagens e métodos de Machine Learning (ML) para resolver um problema específico usando um conjunto de dados aberto/público. \n",
     "\n",
-    "Você pode encontrar muitos conjuntos de dados públicos em https://www.kaggle.com/datasets.\n",
+    "Podemos encontrar muitos conjuntos de dados públicos em https://www.kaggle.com/datasets.\n",
     "\n",
-    "O dataset escolhido para este projeto foi National Universities Ranking.\n",
+    "O dataset escolhido para este projeto foi \"Previsão de Clientes de Cartão de Crédito\" uma vez que é um bom exemplo para colocar em prática a matéria abordada na unidade curricular.\n",
     "\n",
     "O projeto deve usar um único conjunto de dados para regras de classificação, agrupamento e associação."
    ]
@@ -97,7 +97,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b1362bae308d2cbabd8a5ab8f667556672df736664851f8b959a6a34b73173dc"
+    "hash": "11bc3faa42291987dff8047a7fe728de8bffd01e5e426b1fc111590146fa91bf"
    }
   }
  },
