IA: Continuação markdown

--- a/IA/TP2/IA_Projeto02_G4/dataset.ipynb
+++ b/IA/TP2/IA_Projeto02_G4/dataset.ipynb
@@ -47,6 +47,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A Regra de Classificação visa a atribuição de classes/categorias:\n",
+    "    - Atribui uma classe aos novos dados;\n",
+    "    - O atributo de classe é discreto, ou seja, tem poucos valores distintos;\n",
+    "    - O modelo é baseado nas relações existentes entre os vários atributos e o atributo de classe. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -62,6 +73,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A Regra de Agrupamento pretende agrupar objetos semelhantes de acordo com as semelhanças encontradas entre os seus atributos:\n",
+    "    - É usado como uma funcionalidade primária de mineração de dados, tal como, para organizar clientes em segmentos;\n",
+    "    - Também pode ser usado como uma técnica de pré-processamento para outros algoritmos, por exemplo, discretizar atributos contínuos na indução de árvores de classificação."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -74,6 +95,14 @@
    "metadata": {},
    "source": [
     "## Abordagem para um conjunto de dados para a Regra de Associação:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A Regra de Associação "
    ]
   },
   {
