IA: Update markdown

--- a/IA/TP2/IA_Projeto02_G4/dataset.ipynb
+++ b/IA/TP2/IA_Projeto02_G4/dataset.ipynb
@@ -102,7 +102,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- A Regra de Associação "
+    "- A Regra de Associação tem como objetivo básico:\n",
+    "    - Encontrar elementos que implicam na presença de outros elementos em uma mesma transação, ou seja, encontrar relacionamentos ou padrões frequentes entre conjuntos de dados. \n",
+    "    - O termo de transição indica quais itens foram consultados em uma determinada operação de consulta. "
    ]
   },
   {
