IA: Submissão feita

--- a/IA/TP2/IA_Projeto02_G4/dataset.ipynb
+++ b/IA/TP2/IA_Projeto02_G4/dataset.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Link Git:"
+    "## Link Git: https://github.com/tiagoazevedo22/LESI3_SmartCampus"
    ]
   },
   {
@@ -58,97 +58,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler \n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "from tabulate import tabulate\n",
-    "import pandas as pd \n",
+    "Este resultado é o resultado de um modelo de classificação usando o algoritmo KNN. \n",
     "\n",
-    "url = \"BankChurners.csv\"\n",
+    "A tabela mostra o mapeamento dos diferentes níveis de educação, bandeiras de rotatividade, gênero, estado civil, categoria de renda e categoria de cartão.\n",
     "\n",
-    "# Ficheiro de output (resultado)\n",
-    "url_output = \"BankChurnersTestOutput.csv\"\n",
+    "A matriz de confusão mostra o número de verdadeiros positivos (2086), falsos positivos (48), falsos negativos (202) e verdadeiros negativos (196) para as previsões do modelo.\n",
     "\n",
-    "campo_estimar = \"Attrition_Flag\"\n",
-    "variaveis_ignorar = [\"CLIENTNUM\",]\n",
+    "O relatório de classificação mostra a precisão, recall, f1-score e suporte para as duas classes, \"Existing Customer\" e \"Attrited Customer\". \n",
     "\n",
-    "# Ler dataset original\n",
-    "dataset = pd.read_csv(url) \n",
-    "colunas = dataset.columns.size\n",
+    "A precisão é o número de verdadeiros positivos dividido pela soma de verdadeiros positivos e falsos positivos, e mede quantas das previsões positivas foram corretas. \n",
     "\n",
-    "# Retirar o campo a estimar\n",
-    "vars = dataset[campo_estimar].unique().tolist()\n",
+    "O recall é o número de verdadeiros positivos dividido pela soma de verdadeiros positivos e falsos negativos, e mede quantos dos casos positivos reais foram corretamente identificados pelo modelo. \n",
     "\n",
-    "# Lista de campos que precisam de ser convertidas de String para Int \n",
-    "tabela_mapeamento = mapear(dataset, [\"Education_Level\", \"Attrition_Flag\",\"Gender\",  \"Marital_Status\", \"Income_Category\", \"Card_Category\"])\n",
+    "O f1-score é a média harmônica de precisão e recall, e leva em conta tanto os valores de precisão e recall. O suporte é o número de observações em cada classe.\n",
     "\n",
-    "# Tabela de mapeamento String -> Int\n",
-    "table_print(\"Tabela de mapeamento\",tabela_mapeamento)\n",
+    "As estatísticas finais mostram o número total de previsões corretas e incorretas e o percentual de previsões corretas.\n",
     "\n",
-    "# Normalizar tabela original de Int para string\n",
-    "dataset = tabela_normalizar(tabela_mapeamento,dataset)\n",
+    "Em resumo, a saída mostra o desempenho do modelo KNN na classificação das classes \"Existing Customer\" e \"Attrited Customer\".\n",
     "\n",
-    "#Remover o numero de clientes que nao e variaveis\n",
-    "for x in variaveis_ignorar:\n",
-    "    dataset.pop(x)\n",
-    "    colunas = colunas - 1\n",
+    "O modelo tem uma alta precisão de 90% e uma precisão de 91% para a classe \"Existing Customer\", mas um recall e f1-score menores de 49% e 61% respectivamente para a classe \"Attrited Customer\". \n",
     "\n",
-    "# Retirar o campo a estimar do dataset que vai ser processado pelo algorimto\n",
-    "cat_move = dataset.pop(campo_estimar)\n",
-    "colunas = colunas - 1\n",
-    "\n",
-    "# Mover campo a estimar para o final, para ser compativel com codigo do algoritmo\n",
-    "dataset.insert(len(dataset.columns),campo_estimar,cat_move)\n",
-    "\n",
-    "# Output dos resultados \n",
-    "print(\"Execucao do algoritmo: \")\n",
-    "print(\"Confusion Matrix: \")\n",
-    "print(confusion_matrix(y_test, y_predict))\n",
-    "print(\"Report de Classicacao: \")\n",
-    "print(classification_report(y_test, y_predict, target_names=vars)) \n",
-    "\n",
-    "# Iniciar um teste de previsao, com um csv que nao tenha \n",
-    "dataset_teste = pd.read_csv(url)\n",
-    "\n",
-    "# Filtrar campos que vao estimados e ignorados\n",
-    "for x in variaveis_ignorar:\n",
-    "    dataset_teste.pop(x)\n",
-    "\n",
-    "# Retirar campo a estimar\n",
-    "dataset_teste.pop(campo_estimar)\n",
-    "\n",
-    "# Normalizar valores da tabela a ser estimada\n",
-    "dataset_teste = tabela_normalizar(tabela_mapeamento,dataset_teste)\n",
-    "\n",
-    "# Executar algortimo de previsao\n",
-    "X_teste = dataset_teste.iloc[:, :].values\n",
-    "y_teste_predict = classifier.predict(X_teste)\n",
-    "\n",
-    "# Adicionar resultado, Campo previsto\n",
-    "dataset_teste.insert(len(dataset_teste.columns),campo_estimar+\"_predict\",y_teste_predict)\n",
-    "dataset_teste = tabela_normalizar_novoCampo(tabela_mapeamento,dataset_teste,campo_estimar+\"_predict\",campo_estimar)\n",
-    "\n",
-    "# Adicionar resultado, Campo original\n",
-    "dataset_teste.insert(len(dataset_teste.columns),campo_estimar+\"_original\",y)\n",
-    "dataset_teste = tabela_normalizar_novoCampo(tabela_mapeamento,dataset_teste,campo_estimar+\"_original\",campo_estimar)\n",
-    "\n",
-    "# Converter resultado de todas os campos para string\n",
-    "dataset_teste = tabela_normalizar(tabela_mapeamento,dataset_teste,tipo=False)\n",
-    "\n",
-    "#table_print(\"Dataset Final\", dataset_teste)\n",
-    "\n",
-    "# Escrever o excel\n",
-    "dataset_teste.to_csv(url_output)\n",
-    "\n",
-    "# Escrever estatistica de resultados\n",
-    "print(\"Estatistica final de resultados: \")\n",
-    "estatistica_final(dataset_teste,campo_estimar+\"_predict\",campo_estimar+\"_original\")"
+    "Isso significa que o modelo é bom em identificar clientes existentes, mas não tão bom em identificar clientes desistentes."
    ]
   },
   {
@@ -451,7 +385,7 @@
    "metadata": {},
    "source": [
     "- A Regra de Associação tem como objetivo básico:\n",
-    "    - Encontrar elementos que implicam na presença de outros elementos em uma mesma transação, ou seja, encontrar relacionamentos ou padrões frequentes entre conjuntos de dados. \n",
+    "    - Encontrar elementos que implicam na presença de outros elementos em uma mesma transação, ou seja, encontrar relacionamentos ou padrões frequentes entre conjuntos de dados;\n",
     "    - O termo de transição indica quais itens foram consultados em uma determinada operação de consulta. "
    ]
   },
@@ -575,9 +509,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- A abordagem SVM é um algoritmo poderoso e versátil que pode ser usado para resolver problemas de classificação e regressão lineares e não lineares, e é particularmente útil ao trabalhar com dados de alta dimensão.\n",
-    "- O objetivo é escolher um hiperplano com a maior margem possível, pois este terá o menor erro de generalização.\n",
-    "- Os pontos mais próximos do hiperplano, chamados vetores de suporte, determinam a opisção do hiperplano."
+    "- A abordagem SVM é um algoritmo poderoso e versátil que pode ser usado para resolver problemas de classificação e regressão lineares e não lineares, e é particularmente útil ao trabalhar com dados de alta dimensão;\n",
+    "- O objetivo é escolher um hiperplano com a maior margem possível, pois este terá o menor erro de generalização;\n",
+    "- Os pontos mais próximos do hiperplano, chamados vetores de suporte, determinam a posição do hiperplano."
    ]
   },
   {
@@ -603,6 +537,24 @@
     "\n",
     "Este é o processo de ajuste fino dos parâmetros do modelo para otimizar seu desempenho."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusão"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A realização deste projeto permitiu à nossa equipa efetuar uma pesquisa pormenorizada dos diferentes algoritmos especialmente concebidos para a previsão de um determinado resultado mediante o input de um dataset. \n",
+    "- A nossa equipa reconhece a importância e usabilidade destes algoritmos para a previsão de vários cenários do dia a dia. Isto poderá permitir as empresas de um âmbito comercial puderem analisar as suas listagens de clientes e implementar processos para maximizar vendas ou retenção de clientes.\n",
+    "- Além disto, é de frisar que uma máquina opera estes dados de uma forma mais simples, mais organizada e muito mais rápido do que um humano, pelo que poderá contribuir para a eficiência da empresa no geral. \n"
+   ]
   }
  ],
  "metadata": {
@@ -621,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
